# abridge-hackathon

./: .gitignore  INTEGRATION.md  README.md  start_back_end.sh  start_front_end.sh
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: data.py  encounters.py  extraction.py  geo.py  main.py  models.py  pricing.py  real_data.py
data_processing/: 01_patient_codes.ipynb  02_hospital.ipynb  02_hospital_find_and_download_cms-hpt.sh  03_after_visit_summary.ipynb  04_avs_line_to_billable_codes.ipynb  05_explore_cms_mrf.ipynb  text_map_cache.claude-haiku-4-5-20251001.json  text_map_cache.claude-sonnet-5.json
data_processing/cms_hpt/: README.md  encompasshealth_com.cms-hpt.txt  encompasshealth_western_mass.cms-hpt.snippet.txt  southshorehealth_org.cms-hpt.txt
data_processing/cms_hpt_old/: challiance_org.cms-hpt.txt  childrenshospital_org.cms-hpt.txt  lahey_org.cms-hpt.txt  lowellgeneral_org.cms-hpt.NOTE.txt  tuftsmedicine_org.cms-hpt.txt
data_processing/landing-page-drafts/: opencost_health_landing_page.html  opencost_health_landing_page_v3.html
data_processing/processed_csv/: avs_line_to_billable_codes.csv  hospital_to_mrfs.csv  patient_encounter_details.csv  patient_to_after_visit_summary.csv  patient_to_codes.csv
data_processing/random/: snomed_price_agent.py  text_to_codes_agent.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  Root.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: CodeBreakdown.tsx  EstimateDetail.tsx  ExtractionProgress.tsx  HospitalList.tsx  HospitalMap.tsx  LandingPage.css  (+6 more)
(+3 files in other folders)
